updated swagger documentation and voiding multiple records
